# DataManager

./: .gitignore  LICENSE.txt  README.md  core.py  post-no-preference-options.dockerfile  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py  tox.ini
DataManager/: core.py  requirements.txt  shell.py
DataManager/assetmgr/: asset_extractor.py
DataManager/config_files/: set_config_file.py
DataManager/database_layer/: database.py  tables.py
DataManager/datamgr/: data_extractor.py  data_manager.py  historic_async.py
DataManager/gdrive_service/: gdrive_assets.py
DataManager/utils/: conversions.py  timehandler.py
assetmgr/: assetExt.py  asset_manager.py  assetmgr_base.py  nseList.py
database_layer/: database.py  tables.py
database_manager/: commands.py  database.py
datamgr/: DataManager.py  dataExt.py  data_extractor.py  data_manager.py  datamgr_base.py  historic_async.py
src/: test.py
src/DataManager/: api.py  core.py  shell.py
src/DataManager/assetmgr/: asset_extractor.py  asset_manager.py  nse_list.py
src/DataManager/config_files/: set_config_file.py
src/DataManager/database_layer/: database.py  tables.py
src/DataManager/datamgr/: data_extractor.py  data_manager.py  historic_async.py  options_extractor.py
src/DataManager/gdrive_service/: gdrive_assets.py
src/DataManager/utils/: conversions.py  timehandler.py
tests/: test_sample.py
tests/assetmgr_tests/: assetExt_test.py
tests/datamgr_tests/: DataManager_test.py
utils/: timehandler.py
