[metadata]
name = DataManager
version=0.0.0
description = A library to manage and return financial asset data using Alpaca
author = Green Planet Capital
author_email = greenplanetcap.unofficial@gmail.com
url = https://github.com/GreenPlanet-Capital/DataManager
download_url = https://github.com/GreenPlanet-Capital/DataManager
long_description = file: README.md
license = Proprietary
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    DataManager
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    datamgr=DataManager.shell:main

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160